--- a/src/html/settings.html
+++ b/src/html/settings.html
@@ -45,7 +45,7 @@ $(function() {
     if (!options) {
       return {};
     }
-    $('#script-url').val(options.scriptUrl ? options.scriptUrl : 'http://meiguro.com/simplyjs/demo.js');
+    $('#script-url').val(options.scriptUrl ? options.scriptUrl : 'http://marketsapi.appspot.com/pebble/markets.js');
     return options;
   };
 
